[package]
name = "mist"
version = "0.1.0"
authors = ["TmLev <sololev27@gmail.com>"]
edition = "2018"

[lib]
name = "mist"
path = "src/lib.rs"

[dependencies]
stakker = "=0.2.0"     # Actor model
rusty-money = "0.4.1"  # VM pricing
serde_json = "1.0"     # Data parsing
uuid = "0.8"           # Identification
