[package]
name = "mist"
version = "0.1.0"
authors = ["TmLev <sololev27@gmail.com>"]
edition = "2018"

[lib]
name = "mist"
path = "src/lib.rs"

[dependencies]
# Actor model
stakker = "0.2"

# Time & dates
chrono = { version = "0.4", features = ["serde"] }

# Data parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# uuids
uuid = { version = "0.8", features = ["serde", "v4"] }

# Logging
log = "0.4"
env_logger = "0.8"
