[package]
name = "simulations"
version = "0.1.0"
authors = ["TmLev <sololev27@gmail.com>"]
edition = "2018"

[dependencies]
mist = { path = "../mist" }
stakker = "=0.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "actors"
path = "src/bin/actors.rs"

[[bin]]
name = "workspace-env"
path = "src/bin/workspace_env.rs"
